@@ -35,6 +35,7 @@ Cacti CHANGELOG
 -feature#1398: Implement an interactive web based Plugin upgrade process
 -feature#1442: Add validation to GUI inputs
 -feature#1523: Value above RRD maximum value
+-feature#1585: Confirmation screen should show what options have been picked
 -feature#1987: Plugins should be able to be downloaded, installed, and upgraded from Plugin Management
 -feature#2166: LDAP configuration should only use 'user_domains_ldap'
 -feature#2437: Create system-wide Proxy settings for plugins
